# Computergrafik_Lab

./: .gitignore  README.md
Abgabe_2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  geometry.tcc  raytracer  raytracer.cc  raytracer.txt
Abgabe_3_Asteroids3D/viewer/: CMakeCache.txt  CMakeLists.txt  Makefile  asteroid.mtl  cmake_install.cmake  game.cc  game_test  geometry_test  main_game  main_game.cc  math_test  matrix_test  opengl_renderer.cc  opengl_renderer.h  physics_test  saucer.mtl  spaceship.mtl  torpedo.mtl  viewer  wavefront.cc  wavefront_test
Abgabe_3_AsteroidsOpenGL/asteroids_opengl/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  main_game  main_game.cc  math_test  math_test.cc  matrix_test  physics_test
Abgabe_3_Matrix/matrix/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  math.h  math.tcc  math_test  matrix.tcc  matrix_test
Aufgabe_1/asteroids/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_test  geometry_test  main_game  math.h  math_test  physics_test  sdl2_renderer.cc
Aufgabe_1/geometry/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  geometry.tcc  geometry_test  geometry_test.cc  math.tcc  math_test
Aufgabe_1/math/: CMakeCache.txt  Makefile  cmake_install.cmake  math_test
